// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml validator > annotation > should error given too many arguments 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Expected 2 arguments, but got 3.",
    "range": {
      "end": {
        "character": 28,
        "line": 2,
      },
      "start": {
        "character": 25,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error given unknown named argument 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Unknown parameter "unknown", expected one of "min" | "max".",
    "range": {
      "end": {
        "character": 32,
        "line": 2,
      },
      "start": {
        "character": 20,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error when annotation call is not immediately followed by @ sign 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Expect an annotation call immediately after "@" sign, but found whitespaces.",
    "range": {
      "end": {
        "character": 16,
        "line": 2,
      },
      "start": {
        "character": 11,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error when called annotation is not defined 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": {
      "code": "linking-error",
      "containerType": "Annotation",
      "property": "call",
      "refText": "unknown",
    },
    "message": "Could not resolve reference to AnnotationDeclaration named 'unknown'.",
    "range": {
      "end": {
        "character": 18,
        "line": 2,
      },
      "start": {
        "character": 11,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error when named arguments appear before positional arguments - multiple appearances 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Named argument can only appear after all positional arguments.",
    "range": {
      "end": {
        "character": 33,
        "line": 2,
      },
      "start": {
        "character": 18,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Named argument can only appear after all positional arguments.",
    "range": {
      "end": {
        "character": 53,
        "line": 2,
      },
      "start": {
        "character": 38,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Named argument can only appear after all positional arguments.",
    "range": {
      "end": {
        "character": 70,
        "line": 2,
      },
      "start": {
        "character": 55,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error when named arguments appear before positional arguments 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Named argument can only appear after all positional arguments.",
    "range": {
      "end": {
        "character": 23,
        "line": 2,
      },
      "start": {
        "character": 17,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;

exports[`formml validator > annotation > should error when re-assigning to same parameter 1`] = `
[
  {
    "code": undefined,
    "codeDescription": undefined,
    "data": undefined,
    "message": "Duplicate assignment to parameter "min".",
    "range": {
      "end": {
        "character": 34,
        "line": 2,
      },
      "start": {
        "character": 26,
        "line": 2,
      },
    },
    "relatedInformation": undefined,
    "severity": 1,
    "source": "formml",
    "tags": undefined,
  },
]
`;
